--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nbot-wa",
+  "name": "kingedward",
   "version": "1.2.5",
-  "description": "Bot WA",
+  "description": "We all gonna die",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
